syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message CalculatorRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message CalculatorResponse {
  int32 result = 1;
}

service CalculatorService {
  // Unary
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse) {};
}